--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,10 @@ body {
   background: linear-gradient(rgba(24, 255, 0, 0.34), rgba(255, 106, 0, 0.54));
 }
 
+.gradient-box.bewerbungsdossier {
+  background: linear-gradient(rgba(81, 255, 217, 0.48), rgba(0, 128, 255, 0.54));
+}
+
 header {
   background-color: #333;
   color: white;
@@ -564,6 +568,97 @@ h2{
   position: relative;
   border-radius: 6px;
 }
+
+.hallo{
+  font-weight: bold;
+  font-size: 42px;
+}
+
+
+
+
+
+/* Zentrierung der Buttons */
+.button-container {
+  text-align: center;
+  margin-top: 50px;
+}
+
+/* Stil für beide Buttons */
+.styled-button {
+  background-color: #4CAF50; /* Grün */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px; /* Abstand zwischen Buttons */
+  cursor: pointer;
+  border-radius: 12px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.styled-button:hover {
+  background-color: #45a049; /* Dunkleres Grün bei Hover */
+  transform: translateY(-2px);
+}
+
+/* Stil für den Download-Button (besonders) */
+.download-button {
+  background-color: #2196F3; /* Blau */
+}
+
+.download-button:hover {
+  background-color: #0b79d0; /* Dunkleres Blau bei Hover */
+}
+
+/* Stile für das Modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  position: relative;
+  margin: 15% auto;
+  padding: 20px;
+  width: 80%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+}
+
+
+
+
+
+
+
 
 @media screen and (max-width: 600px) {
   .timeline::after {
